--- a/AnimalsAPP/FriendsOfMan/src/Resources/database.properties
+++ b/AnimalsAPP/FriendsOfMan/src/Resources/database.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://localhost/pet_farm?serverTimezone=Europe/Moscow&useSSL=false
+url = jdbc:mysql://localhost/friendsOfMan?serverTimezone=Europe/Moscow&useSSL=false
 username = root
-password = root
+password = DvV#20241130
